--- a/popup.html
+++ b/popup.html
@@ -1,9 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="interceptor.css">
+    <link rel="stylesheet" href="popup.css">
+    <!--Bootstrap is used for styles-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   </head>
-  <body>
-    <h2>Intercept web requests</h2>
+  <body class="popup-wrapper">
+      <div class="container">
+      <h2>Intercept web requests</h2>
+      <form class="mt-3">
+        <div class="mb-3">
+          <label for="hostname" class="form-label">Host name:</label>
+          <input type="text" class="form-control" id="hostname" aria-describedby="emailHelp">
+          <div id="hostnameHelp" class="form-text">Like https://demomicrm-org.myfreshworks.dev</div>
+        </div>
+        <ul class="list-group" id="redirect-configs-list">
+        </ul>
+        <div class="row mt-3" title="TODO: Implement update">
+          <button disabled type="submit" class="btn btn-primary">Update</button>
+        </div>
+      </form>
+  </div>
+
+  <script src="popup.js"></script>
   </body>
 </html>
