--- a/popup.html
+++ b/popup.html
@@ -8,19 +8,21 @@
   <body class="popup-wrapper">
       <div class="container">
       <h2>Intercept web requests</h2>
-      <form class="mt-3">
+      <form class="mt-3" id="config-form">
         <div class="mb-3">
           <label for="hostname" class="form-label">Host name:</label>
-          <input type="text" class="form-control" id="hostname" aria-describedby="emailHelp">
+          <input name="hostname" type="text" class="form-control" id="hostname" aria-describedby="emailHelp">
           <div id="hostnameHelp" class="form-text">Like https://demomicrm-org.myfreshworks.dev</div>
         </div>
-        <ul class="list-group" id="redirect-configs-list">
+        <ul class="list-group p-1" id="redirect-configs-list">
         </ul>
-        <div class="row mt-3" title="TODO: Implement update">
-          <button disabled type="submit" class="btn btn-primary">Update</button>
+        <div class="row mt-3">
+          <input type="submit" class="btn btn-sm btn-primary col-2" value="Update" />
+          <button id="refreshMocksBtn" class="btn btn-sm btn-success col-2 ms-2">Refresh Mocks</button>
         </div>
       </form>
   </div>
+  <div id="message-container" class="mt-1 alert"></div>
 
   <script src="popup.js"></script>
   </body>
