Made hostname help text dynamic.

--- a/popup.html
+++ b/popup.html
@@ -12,7 +12,7 @@
         <div class="mb-3">
           <label for="hostname" class="form-label">Host name:</label>
           <input name="hostname" type="text" class="form-control" id="hostname" aria-describedby="emailHelp">
-          <div id="hostnameHelp" class="form-text">Like https://demomicrm-org.myfreshworks.dev</div>
+          <div id="hostnameHelp" class="form-text"></div>
         </div>
         <ul class="list-group p-1" id="redirect-configs-list">
         </ul>
